<resources>
    <string name="app_name">Hopp I Havet</string>
    <string name="badested">Badested</string>
    <string name="symbol_for_air">i luften</string>
    <string name="symbol_for_water">i vannet</string>
    <string name="symbol_for_weather">Symbol for vær</string>
    <string name="temp_placeholder">"    "</string>
    <string name="temp_air">Temperatur luft:</string>
    <string name="temp_water">Temperatur vann:</string>
    <string name="precipitation">Nedbør:</string>
    <string name="description_title">Beskrivelse:</string>
    <string name="show_facilities">Vis fasiliteter</string>
    <string name="facilities_title">Fasiliteter:</string>
    <string name="show_map">Vis i kart</string>
    <string name="wind">Vind:</string>
    <string name="has_halted_error">Noe gikk galt. Prøv igjen om litt.</string>
    <string name="search">Søk på badested eller område</string>
    <string name="search_no_result">Vi fant dessverre ingen badesteder eller områder som passer med det du søkte på.\n\nSjekk at navnet er riktig stavet i søkefeltet.</string>
    <string name="source">Bilde og beskrivelse fra oslofjorden.com og Oslo Kommune, ikoner og værdata fra Meterologisk Institutt</string>

    <string name="wic_1_desc">  Sol</string>
    <string name="wic_2_desc">  Lettskyet</string>
    <string name="wic_3_desc">  Delvis skyet</string>
    <string name="wic_4_desc">  Skyet</string>
    <string name="wic_5_desc">  Regnbyger</string>
    <string name="wic_6_desc">  Regnbyger med torden</string>
    <string name="wic_7_desc">  Sluddbyger</string>
    <string name="wic_8_desc">  Snøbyger</string>
    <string name="wic_9_desc">  Regn</string>
    <string name="wic_10_desc"> Kraftig regn</string>
    <string name="wic_11_desc"> Kraftig regn og torden</string>
    <string name="wic_12_desc"> Sludd</string>
    <string name="wic_13_desc"> Snø</string>
    <string name="wic_14_desc"> Snø og torden</string>
    <string name="wic_15_desc"> Tåke</string>
    <string name="wic_20_desc"> Sluddbyger og torden</string>
    <string name="wic_21_desc"> Snøbyger og torden</string>
    <string name="wic_22_desc"> Regn og torden</string>
    <string name="wic_23_desc"> Sludd og torden</string>
    <string name="wic_24_desc"> Lette regnbyger og torden</string>
    <string name="wic_25_desc"> Kraftige regnbyger og torden</string>
    <string name="wic_26_desc"> Lette sluddbyger og torden</string>
    <string name="wic_27_desc"> Kraftige sluddbyger og torden	</string>
    <string name="wic_28_desc"> Lette snøbyger og torden</string>
    <string name="wic_29_desc"> Kraftige snøbyger og torden</string>
    <string name="wic_30_desc"> Lett regn og torden</string>
    <string name="wic_31_desc"> Lett sludd og torden</string>
    <string name="wic_32_desc"> Kraftig sludd og torden</string>
    <string name="wic_33_desc"> Lett snø og torden</string>
    <string name="wic_34_desc"> Kraftig snø og torden</string>
    <string name="wic_40_desc"> Lette regnbyger</string>
    <string name="wic_41_desc"> Kraftige regnbyger</string>
    <string name="wic_42_desc"> Lette sluddbyger</string>
    <string name="wic_43_desc"> Kraftige sluddbyger</string>
    <string name="wic_44_desc"> Lette snøbyger</string>
    <string name="wic_45_desc"> Kraftige snøbyger</string>
    <string name="wic_46_desc"> Lett regn</string>
    <string name="wic_47_desc"> Lett sludd</string>
    <string name="wic_48_desc"> Kraftig sludd</string>
    <string name="wic_49_desc"> Lett snø</string>
    <string name="wic_50_desc"> Kraftig snø</string>


    <string name="no_internet_toast">"Sjekk at du har internett."</string>
    <string name="outdated_info_toast">"Værmeldingene kan være utdatert."</string>
    <string name="current_weather">Været denne timen:</string>
</resources>
