<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/ScrollView_badested"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/himmel"
    android:backgroundTintMode="add"
    android:scrollbarThumbVertical="@color/sol"
    android:scrollbarSize="4dp"
    tools:context=".ui.BadestedActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/badested_background_white"
        android:paddingBottom="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ImageView_badested_image"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_margin="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/badested"
            android:padding="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/TextView_bilde_kilde"
            android:layout_width="220dp"
            android:layout_height="18dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="7dp"
            android:gravity="end"
            android:text="@string/bilde_kilde"
            android:textColor="@color/textColorLightGrey"
            android:textSize="13sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/TextView_badested_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ImageView_badested_image" />

        <TextView
            android:id="@+id/TextView_badested_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/badestednavn"
            android:textColor="@color/textColor"
            android:textSize="22sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@+id/weather_container"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ImageView_badested_image" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/weather_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/badested_background_grey"
            android:padding="2dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TextView_badested_name">

            <TextView
                android:id="@+id/TextView_badested_air_temp_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/temp_air"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/TextView_badested_air_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/TextView_badested_air_temp_desc"
                app:layout_constraintLeft_toLeftOf="@id/barrier" />


            <TextView
                android:id="@+id/TextView_badested_water_temp_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/temp_water"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/TextView_badested_air_temp_desc" />

            <TextView
                android:id="@+id/TextView_badested_water_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/TextView_badested_water_temp_desc"
                app:layout_constraintLeft_toLeftOf="@id/barrier" />


            <TextView
                android:id="@+id/TextView_badested_precipitation_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/precipitation"
                android:textColor="@color/textColor"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/TextView_badested_water_temp_desc" />

            <TextView
                android:id="@+id/TextView_badested_precipitation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/textColor"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/TextView_badested_precipitation_desc"
                app:layout_constraintLeft_toLeftOf="@id/barrier" />

            <TextView
                android:id="@+id/TextView_badested_wind_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/wind"
                android:textColor="@color/textColor"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/TextView_badested_precipitation_desc" />

            <TextView
                android:id="@+id/TextView_badested_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/textColor"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/TextView_badested_wind_desc"
                app:layout_constraintLeft_toLeftOf="@id/barrier" />

            <TextView
                android:id="@+id/TextView_badested_valid_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/TextView_badested_wind_desc" />

            <ImageView
                android:id="@+id/ImageView_badested_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/symbol_for_weather"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:constraint_referenced_ids="TextView_badested_wind_desc,TextView_badested_precipitation_desc,TextView_badested_water_temp_desc,TextView_badested_air_temp_desc"
                tools:layout_editor_absoluteX="350dp"
                tools:layout_editor_absoluteY="2dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/badested_background_grey"
            android:paddingBottom="5dp"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weather_container">

            <TextView
                android:id="@+id/TextView_badested_description_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/description_title"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/TextView_badested_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:maxLines="8"
                android:paddingBottom="5dp"
                android:scrollbars="vertical"
                android:scrollbarThumbVertical="@color/sol"
                android:textColor="@color/textColor"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/TextView_badested_description_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_facilities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/badested_background_grey"
            android:paddingBottom="5dp"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_description">

            <TextView
                android:id="@+id/TextView_badested_facilities_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/facilities_title"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/TextView_badested_facilities"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:textColor="@color/textColor"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/TextView_badested_facilities_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/Button_badested_facilities"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/badested_background_hav"
            android:drawableEnd="@drawable/ic_information"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/show_facilities"
            android:textAllCaps="false"
            android:textColor="@color/textColorLight"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/Button_badested_show_on_map"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_facilities" />

        <Button
            android:id="@+id/Button_badested_show_on_map"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/badested_background_orange"
            android:drawableEnd="@android:drawable/ic_dialog_map"
            android:drawablePadding="10dp"
            android:padding="20dp"
            android:text="@string/show_map"
            android:textAllCaps="false"
            android:textColor="@color/textColorLight"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/Button_badested_facilities"
            app:layout_constraintTop_toBottomOf="@+id/container_facilities" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>